external-crates/move/crates/move-compiler/tests/move_2024/parser/positional_struct_explicit_type_args.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03022]: invalid usage position
   ┌─ tests/move_2024/parser/positional_struct_explicit_type_args.move:16:17
   │
16 │         let _ = Foo <u64>(0);
   │                 ^^^ Expected a local or constant, but found struct 'Foo' in current scope
   │
   = Structs with positional arguments must be written as 'Foo<T>( ... )'

error[E04003]: built-in operation not supported
   ┌─ tests/move_2024/parser/positional_struct_explicit_type_args.move:16:17
   │
16 │         let _ = Foo <u64>(0);
   │                 ^^^^^^^^
   │                 │
   │                 Invalid argument to '>'
   │                 Found: 'bool'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E03009]: unbound variable
   ┌─ tests/move_2024/parser/positional_struct_explicit_type_args.move:16:22
   │
16 │         let _ = Foo <u64>(0);
   │                      ^^^ Unbound variable 'u64'

error[E04007]: incompatible types
   ┌─ tests/move_2024/parser/positional_struct_explicit_type_args.move:16:25
   │
16 │         let _ = Foo <u64>(0);
   │                 --------^ - Found: integer. It is not compatible with the other type.
   │                 │       │  
   │                 │       Incompatible arguments to '>'
   │                 Found: 'bool'. It is not compatible with the other type.

error[E04003]: built-in operation not supported
   ┌─ tests/move_2024/parser/positional_struct_explicit_type_args.move:16:27
   │
16 │         let _ = Foo <u64>(0);
   │                 --------  ^ Invalid argument to '>'
   │                 │          
   │                 Found: 'bool'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'
